# geometry-processing-demo

./: .gitignore  CMakeLists.txt  README.md
3dmodels/: cat_blender.mtl
include/: collapse_least_cost_edge.cpp  collapse_least_cost_edge.h
src/: _decimation_qem.cpp  _decimation_shortest.cpp
